Update openapi.yaml to match source code
